testdata/baselines/reference/submodule/compiler/checkJsFiles.errors.txt
a.js(2,1): error TS2322: Type '0' is not assignable to type 'string'.


==== a.js (1 errors) ====
    var x = "string";
    x = 0;
    ~
!!! error TS2322: Type '0' is not assignable to type 'string'.